# 2.5D-robot

./: .gitignore  README.md  pyproject.toml
docs/: VERSION_0_1_1_BASELINE.md  VERSION_0_2_2_COMPLEX_INDOOR_VALIDATION.md  VERSION_0_2_3_IMPLEMENTATION_PLAN.md  VERSION_0_2_3_VISUALIZATION_DESIGN_NOTE.md  VERSION_0_2_COST_AWARE.md  VERSION_0_2_REVIEW_DRAFT.md
examples/: run_mvp.py
maps/: baseline_room.json  complex_indoor_room.json  cost_choice_room.json  narrow_passage_room.json  u_trap_room.json
outputs/baseline/: path_log.csv
outputs/complex_indoor_2d5/: path_log.csv
outputs/complex_indoor_baseline/: path_log.csv
outputs/cost_choice_2d5/: path_log.csv
outputs/cost_choice_baseline/: path_log.csv
outputs/narrow_passage/: path_log.csv
outputs/u_trap/: path_log.csv
src/robot_nav_sim/: __init__.py  map2d5.py  metrics.py  planner.py  robot.py  simulator.py  visualization.py
tests/: test_outputs.py  test_planner.py  test_simulator.py
