[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-nav-mvp"
version = "0.1.0"
description = "2D-core / 2.5D-ready cleaning robot navigation simulation MVP"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
